--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint --ext js,ts,tsx . --cache --report-unused-disable-directives --max-warnings=0",
+    "lint:fix": "eslint --ext js,ts,tsx . --cache --report-unused-disable-directives --max-warnings=0 --fix",
+    "format": "prettier --write . --config ./.prettierrc",
+    "prepare": "husky install"
   },
   "dependencies": {
     "expo": "~47.0.8",
+    "expo-device": "~5.0.0",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -18,9 +23,21 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@commitlint/config-conventional": "^17.3.0",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.44.0",
+    "eslint": "^8.0.1",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.31.11",
+    "husky": "^8.0.2",
+    "prettier": "^2.8.0"
   },
   "private": true
 }
