--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-paper": "^4.12.5",
     "react-native-web": "~0.18.9"
   },
   "devDependencies": {
@@ -26,7 +27,6 @@
     "@commitlint/config-conventional": "^17.3.0",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
-    "typescript": "^4.6.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.44.0",
     "eslint": "^8.0.1",
@@ -37,7 +37,8 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.31.11",
     "husky": "^8.0.2",
-    "prettier": "^2.8.0"
+    "prettier": "^2.8.0",
+    "typescript": "^4.6.3"
   },
   "private": true
 }
