--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,8 @@
     "@typescript-eslint/semi": "off",
     "@typescript-eslint/comma-dangle": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
-    "@typescript-eslint/member-delimiter-style": "off"
+    "@typescript-eslint/member-delimiter-style": "off",
+    "semi": "off"
   },
   "settings": {
     "react": {
