--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,8 @@
     "@typescript-eslint/comma-dangle": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/member-delimiter-style": "off",
-    "semi": "off"
+    "semi": "off",
+    "react/display-name": "off"
   },
   "settings": {
     "react": {
