--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo-google-fonts/lato": "^0.2.2",
     "@expo-google-fonts/oswald": "^0.2.2",
+    "@react-navigation/bottom-tabs": "^6.4.3",
+    "@react-navigation/native": "^6.0.16",
     "expo": "~47.0.8",
     "expo-device": "~5.0.0",
     "expo-font": "~11.0.1",
@@ -23,6 +25,8 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-paper": "^4.12.5",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.9",
     "styled-components": "^5.3.6"
