--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@expo-google-fonts/oswald": "^0.2.2",
     "@react-navigation/bottom-tabs": "^6.4.3",
     "@react-navigation/native": "^6.0.16",
+    "camelize-ts": "^2.1.1",
     "expo": "~47.0.8",
     "expo-device": "~5.0.0",
     "expo-font": "~11.0.1",
