--- a/package.json
+++ b/package.json
@@ -35,22 +35,18 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@commitlint/config-conventional": "^17.3.0",
+    "@react-native-community/eslint-config": "^3.2.0",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
     "@types/styled-components": "^5.1.26",
     "@types/styled-components-react-native": "^5.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.44.0",
+    "@typescript-eslint/eslint-plugin": "^5.45.1",
     "babel-plugin-styled-components": "^2.0.7",
-    "eslint": "^8.0.1",
-    "eslint-config-standard-with-typescript": "^23.0.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.0.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.31.11",
+    "eslint": "^8.29.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jest": "^27.1.6",
     "husky": "^8.0.2",
-    "prettier": "^2.8.0",
+    "prettier": "^2.8.1",
     "typescript": "^4.6.3"
   },
   "private": true
