--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^27.1.6",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
     "husky": "^8.0.2",
     "prettier": "^2.8.1",
     "typescript": "^4.6.3"
