--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo-google-fonts/lato": "^0.2.2",
     "@expo-google-fonts/oswald": "^0.2.2",
+    "@react-native-masked-view/masked-view": "0.2.8",
     "@react-navigation/bottom-tabs": "^6.4.3",
     "@react-navigation/native": "^6.0.16",
+    "@react-navigation/stack": "^6.3.8",
     "camelize-ts": "^2.1.1",
     "expo": "~47.0.8",
     "expo-device": "~5.0.0",
@@ -25,6 +27,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-gesture-handler": "^2.8.0",
     "react-native-paper": "^4.12.5",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
