--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.9",
+    "react-native-webview": "^11.25.1",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
