--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-device": "~5.0.0",
     "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.15.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
