--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint --ext js,ts,tsx . --cache --report-unused-disable-directives --max-warnings=0",
     "lint:fix": "eslint --ext js,ts,tsx . --cache --report-unused-disable-directives --max-warnings=0 --fix",
     "format": "prettier --write . --config ./.prettierrc",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "publish-app": "eas update"
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
@@ -25,6 +26,7 @@
     "expo-device": "~5.0.0",
     "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.6",
     "firebase": "^9.15.0",
     "lottie-react-native": "5.1.4",
     "react": "18.1.0",
