--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
     "lint": "eslint --ext js,ts,tsx . --cache --report-unused-disable-directives --max-warnings=0",
     "lint:fix": "eslint --ext js,ts,tsx . --cache --report-unused-disable-directives --max-warnings=0 --fix",
     "format": "prettier --write . --config ./.prettierrc",
-    "prepare": "husky install",
-    "update": "eas update",
-    "build-android": "eas build --platform android",
-    "build-ios": "eas build --platform ios"
+    "prepare": "husky install"
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
