--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/stack": "^6.3.8",
     "camelize-ts": "^2.1.1",
     "expo": "~47.0.8",
+    "expo-camera": "~13.1.0",
     "expo-device": "~5.0.0",
     "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
